# Tasks

./: .env.example  Dockerfile  Makefile  README.md  db.sqlite3  pyproject.toml
task_one/: mnist_digit_identify.ipynb  readme.md
task_three/: apps.py  readme.md  urls.py  views.py
task_three/coordinate_finder/: get_coordinates.py
task_three/map/: __init__.py  get_coordinates.py
task_two/: admin.py  apps.py  forms.py  models.py  readme.md  urls.py  views.py
task_two/migrations/: 0001_initial.py
tasks/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/task_three/: coordinate_finder.html
templates/task_two/: add.html  retrieve.html  update.html
